# carbatpy-outdated

./: .gitlab-ci.yml  .readthedocs.yaml  LICENSE  README.md  fluid_properties.py  pyproject.toml  requirements.txt
.github/workflows/: sphinx.yml
carbatpy/: __init__.py  components.py  compressor_roskosch_orig_rp.py  compressor_roskosch_orig_rp_adapt_review.py  compressor_roskosch_orig_rp_adapt_review_state_points.py  compressor_welp_ivp.py  compressor_welp_ivp_changed_interation.py  fl_props_compressor.py  fluid_properties_rp.py  fluid_props.py  heat_exchanger.py  heat_exchanger_input0.xlsx  heat_pump_rp.py  hex_run_script.py  mixture_search.py  optimize_mixture_hex.py  rev_condenser.py  st_hex_parameters_file.yaml  test_compressor_roskosch_orig_rp.py  xl_read_heatexchanger.py
carbatpy/components/: components.py  compressor_simple.py  heat_exchanger.py  heat_exchanger_thermo.py  heat_exchanger_thermo_v2.py  throttle_simple.py
carbatpy/examples/: __init__.py  fluid_screening.py  heat_pump_simple_run.py  hex_exc_run_script.py  hex_run_script.py  hp_fluid_opti_pymoo.py  st_hex_parameters_file1.yaml
carbatpy/src/: compressor_welp.py  test_compressor_welp.py
carbatpy/src/run_scripts/: fluid_properties_hl.py  fluid_properties_ll.py  fluid_properties_rp.py  heat_exchanger.py  heat_pump_linear.py
carbatpy/src/work_in_progress/: coolPropTGlide0.py  dp_heat_exchanger_2phase_ll.py  fluid_properties_ll.py  heat_exchanger_bvp.py  heat_exchanger_input1.xlsx  heat_pump0.yaml  heat_pump_rp_y.py  hex_exc_run_script.py  trend_interface.py  trenddll_test.py  xl_read_heatexchanger_new.py
carbatpy/src/work_in_progress_welp/: README.md  heat_exchanger.py  heat_transfer.py  heat_transfer_evaporator.py  lab_setup_calculation.py  requirements.txt
doc/: conf.py  fluid_properties_rp.rst  heat_exchanger.rst  index.rst  requirements.txt
doc/_build/doctrees/: carbatpy.doctree  environment.pickle  fluid_properties.doctree  fluid_properties_rp.doctree  heat_exchanger.doctree  heat_pump_rp.doctree  index.doctree  mixture_search.doctree
doc/_build/epub/: .buildinfo  carbatpy.epub  content.opf  fluid_properties_rp.xhtml  genindex.xhtml  heat_exchanger.xhtml  heat_pump_rp.xhtml  index.xhtml  mixture_search.xhtml  nav.xhtml  py-modindex.xhtml  toc.ncx
doc/_build/html/: .buildinfo  carbatpy.html  fluid_properties.html  (+10 more)
docs/: conf.py  fluid_properties_rp.rst  heat_exchanger.rst  heat_pump_rp.rst  index.rst  mixture_search.rst  requirements.txt
src/work_in_progress/: heat_exchanger.py
(+25 files in other folders)
