# -*- coding: utf-8 -*-
"""
Created on Mon Oct  3 09:27:38 2022

@author: atakan
"""
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carbatpy",
version = "0.0.1",
authors = [
    { name = "Burak Atakan", email = "batakan@uni-duisburg.de"},
    ]
description = ("A module to calculate and optimize Carnot Batteries \
               (Thermal energy storage)")
readme ='README.md'
requires-python = ">=3.7"
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    ]
keywords = ["thermal-energy-storage"," heat-exchanger",
            " thermodynmics", "heat transfer" ]
license = { text = "MIT"}
dependencies = [
    "CoolProp",
    "numpy",
    "scipy",
    "matplotlib",
    "pandas"
    ]

packages=['carbatpy']

[tool.setuptools]
packages = ["carbatpy"]
[tool.setuptools.packages.find]
where = ["src", "src/run_scripts", "src/analysis"]  # list of folders that contain the packages (["."] by default)
# include = ["my_package*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["carbatpy.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project.urls]
"Homepage" = "https://github.com/burakatakan/carbatpy",

